tests/js_error/source_locations/expression/template/tagged_template_throws.js
function foo() {
  throw new Error()
}

foo`test`;